--- a/WPF-MVVM-CV19/Views/Windows/MainWindow.xaml
+++ b/WPF-MVVM-CV19/Views/Windows/MainWindow.xaml
@@ -3,10 +3,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF_MVVM_CV19"
+        xmlns:vm="clr-namespace:WPF_MVVM_CV19.ViewModels"
+        xmlns:l="clr-namespace:WPF_MVVM_CV19"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding Title}" 
+        Height="450" Width="800">
+    <Window.DataContext>
+        <vm:MainWindowViewModel/>
+    </Window.DataContext>
     <Grid>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="10,10,0,0"
+                 Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"
+                 TextWrapping="Wrap" VerticalAlignment="Top" Width="281"/>
 
     </Grid>
 </Window>
