Binding Status property

--- a/WPF-MVVM-CV19/Views/Windows/MainWindow.xaml
+++ b/WPF-MVVM-CV19/Views/Windows/MainWindow.xaml
@@ -22,7 +22,7 @@
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
             <StatusBarItem MinWidth="100" MaxWidth="300">
-                <TextBlock Text="1234" /> 
+                <TextBlock Text="{Binding Status}" /> 
             </StatusBarItem>
             <StatusBarItem>
                 <ProgressBar Width="120" Height="14" Value="30" />
