--- a/WPF-MVVM-CV19/Views/Windows/MainWindow.xaml
+++ b/WPF-MVVM-CV19/Views/Windows/MainWindow.xaml
@@ -9,18 +9,26 @@
         mc:Ignorable="d"
         Title="{Binding Title}" 
         Height="450" Width="800">
+    <Window.InputBindings>
+        <KeyBinding Modifiers="Control" Key="Q" Command="{Binding CloseApplicationCommand}"></KeyBinding>
+    </Window.InputBindings>
     <Window.DataContext>
         <vm:MainWindowViewModel/>
     </Window.DataContext>
+    <Window.Resources>
+        <cmd:CloseApplicationCommand x:Key="CloseApplicationCommand" />
+    </Window.Resources>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="File">
                 <!--<MenuItem Header="Exit" Command="{Binding CloseApplicationCommand}"></MenuItem>-->                
-                <MenuItem Header="Exit">
+                <MenuItem Header="Exit" Command="{StaticResource CloseApplicationCommand}" />                
+
+                <!--<MenuItem Header="Exit">
                     <MenuItem.Command>
                         <cmd:CloseApplicationCommand/>
                     </MenuItem.Command>
-                </MenuItem>                
+                </MenuItem>-->                
             </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem Header="About..."></MenuItem>
@@ -50,7 +58,14 @@
                                Fill="Blue" Stroke="Red" 
                                StrokeThickness="3" RadiusX="5" RadiusY="7"/>
                     <Ellipse Grid.Column="1" Grid.Row="0" 
-                             Fill="Red" Stroke="Blue" StrokeThickness="3"/>
+                             Fill="Red" Stroke="Blue" StrokeThickness="3">
+                        <Ellipse.InputBindings>
+                            <MouseBinding 
+                                Command="{Binding CloseApplicationCommand}"
+                                MouseAction="LeftDoubleClick" />
+                        </Ellipse.InputBindings>
+                    </Ellipse>
+
                     <GridSplitter Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" 
                                   HorizontalAlignment="Right"
                                   Width="4"/>
