--- a/WPF-MVVM-CV19/App.xaml
+++ b/WPF-MVVM-CV19/App.xaml
@@ -4,19 +4,10 @@
              xmlns:local="clr-namespace:WPF_MVVM_CV19"
              StartupUri="Views\Windows\MainWindow.xaml">
     <Application.Resources>
-        <Style TargetType="Button">
-            <Setter Property="Background" Value="AliceBlue"/>
-            <Setter Property="Margin" Value="3,0"/>
-            <Setter Property="Padding" Value="3,5"/>
-        </Style>
-
-        <Style x:Key="PrimaryBtn" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
-            <Setter Property="FontWeight" Value="Bold"/>
-        </Style>
-
-        <Style x:Key="DangerBtn" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
-            <Setter Property="Background" Value="Red"/>
-            <Setter Property="Foreground" Value="White"/>
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Styles/Buttons.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
